misc tests fail: assert(!thread->owns_locks()) failed: must release all locks when leaving VM

XMLWordPrintable

    • b09
    • x86_64, aarch64
    • linux, windows

        The following test failed in the JDK20 CI:

        vm/jvmti/ObjectFree/ofre001/ofre00101/ofre00101.html

        Here's a snippet from the log file:

        #section:testExecute
        ----------messages:(1/1037)----------
        command: com.sun.jck.lib.ExecJCKTestOtherJVMCmd LD_LIBRARY_PATH=/opt/mach5/mesos/work_dir/jib-master/install/jck/19/b18/extra/bundles/JCK-extra-19.zip/JCK-extra-19/binaries/linux-aarch64/lib /opt/mach5/mesos/work_dir/jib-master/install/jdk-20+8-406/linux-aarch64-debug.jdk/jdk-20/fastdebug/bin/java --enable-preview -Djava.awt.headless=true -XX:+CreateCoredumpOnCrash -XX:+UseSerialGC -XX:MaxRAMPercentage=6.25 --show-version -Xms32m -Xmx1024m -Djdk.attach.allowAttachSelf=true -Djava.security.properties=/opt/mach5/mesos/work_dir/jib-master/install/jck/19/b18/extra/bundles/JCK-extra-19.zip/JCK-extra-19/extra.security.properties -agentlib:jckjvmti=ofre00101 -classpath :/opt/mach5/mesos/work_dir/jib-master/install/jck/19/b18/bundles/JCK-runtime-19.jar/JCK-runtime-19/classes: -Djava.security.policy=/opt/mach5/mesos/work_dir/jib-master/install/jck/19/b18/bundles/JCK-runtime-19.jar/JCK-runtime-19/lib/jck.policy javasoft.sqe.tests.vm.jvmti.ofre001.ofre00101.ofre00101 -platform.jvmtiSupported true -platform.nativeLibsLinkage dynamic
        ----------out1:(0/0)----------
        ----------out2:(24/2040)----------
        java 20-ea 2023-03-21
        Java(TM) SE Runtime Environment (fastdebug build 20-ea+8-406)
        Java HotSpot(TM) 64-Bit Server VM (fastdebug build 20-ea+8-406, mixed mode, sharing)
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/interfaceSupport.inline.hpp:182
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S10191/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e31097f9-3ce4-4ac2-99e7-51c0b1efd6b2/runs/05232410-acaf-412b-9e40-7b683475a67e/workspace/open/src/hotspot/share/runtime/interfaceSupport.inline.hpp:182), pid=1290327, tid=1290331
        # assert(!thread->owns_locks()) failed: must release all locks when leaving VM
        #
        # JRE version: Java(TM) SE Runtime Environment (20.0+8) (fastdebug build 20-ea+8-406)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+8-406, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, serial gc, linux-aarch64)
        # Problematic frame:
        # V [libjvm.so+0x12c60a8] JvmtiJavaThreadEventTransition::JvmtiJavaThreadEventTransition(JavaThread*)+0x148
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S10129/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/95922504-7250-440e-bdd3-057f810cf226/runs/b1e3cd30-b0a4-4610-816e-8cffc4b2885c/testoutput/test-support/jck_runtime_vm_jvmti/core.1290327)
        #
        # An error report file with more information is saved as:
        # /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S10129/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/95922504-7250-440e-bdd3-057f810cf226/runs/b1e3cd30-b0a4-4610-816e-8cffc4b2885c/testoutput/test-support/jck_runtime_vm_jvmti/hs_err_pid1290327.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        result: Failed. unexpected exit code: exit code 134


        Unfortunately, the failures artifact link does not show an hs_err_pid file.

              Assignee:
              Serguei Spitsyn
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: