8290908: misc tests fail: assert(!thread->owns_locks()) failed: must release all locks when leaving VM

Backport-of: 0ae834105740f7cf73fe96be22e0f564ad29b18d